test/kubernetes/e2e/features/route_delegation/inputs/basic.yaml
# Configuration:
#
# Parent infra/root:
#   - Delegate /anything/team1 to team1 namespace
#   - Delegate /anything/team2 to team2 namespace
#
# Child team1/svc1:
#   - Route /anything/team1/foo to team1/svc1
#   - No parentRefs
#
# Child team2/svc2:
#   - Route /anything/team2/foo to team2/svc2
#   - Parent infra/root
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: root
  namespace: infra
spec:
  parentRefs:
  - name: http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team2
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team2
---
apiVersion: v1
kind: Namespace
metadata:
  name: team1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc1
  namespace: team1
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1/foo
    backendRefs:
    - name: svc1
      port: 8000
---
apiVersion: v1
kind: Namespace
metadata:
  name: team2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc2
  namespace: team2
spec:
  parentRefs:
  - name: root
    namespace: infra
    group: gateway.networking.k8s.io
    kind: HTTPRoute
  rules:
  - matches:
    - path:
        type: Exact
        value: /anything/team2/foo
    backendRefs:
    - name: svc2
      port: 8000
---
